--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-        <meta name="description" content="Mrittik is a Modern Architecture Theme">
+        <meta name="description" content="Arcana is a Modern Architecture Theme">
         <meta name="author" content="">
 
         <!-- Favicon and touch Icons -->
@@ -76,9 +76,9 @@
                             <span class="line"></span>
                             <span class="line"></span>
                         </button>
-                        <div class="header_search">								
+                        <!-- <div class="header_search">								
                             <button type="submit" class="form-control-submit"><i class="bi bi-search"></i></button>
-                        </div>
+                        </div> -->
                         <div class="open_search">
                             <form class="search_form" action="search.php">
                                 <input type="text" name="search" class="keyword form-control" placeholder="Search..." >
@@ -100,16 +100,16 @@
                 <a href="index.html" class="dark_logo"><img src="./assets/img/logo-dark-lg.svg" alt="logo"></a>
             </div>
 			<div class="aside_info_inner">
-                <p>Mrittik Architects is a full-service design firm providing architecture architecture.</p>
+                <p>Arcana Architectures is a full-service design firm.</p>
                 
                 <div class="aside_info_inner_box">
                     <h5>Contact Info</h5>
-                    <p>+123 456 789 33</p>
-                    <p>3 Madison Street, NY <br> United States of America</p>
-                    <p>mrittikarch@gmail.com</p>
+                    <p>+91 81040 43086</p>
+                    <!-- <p>Mumbai <br> India</p> -->
+                    <p>rutuja.p@arcanaarchitects.com</p>
 
                     <h5>Office Address</h5>
-                    <p>+Time Square, New York <br> USA, 3454</p>
+                    <p>Mumbai, India</p>
                 </div>
                 <div class="social_sites">
                     <ul class="d-flex align-items-center justify-content-center">
@@ -267,7 +267,7 @@
                 </div>
                 <div class="container">
                     <div class="row align-items-center">
-                        <div class="col-lg-5 col-md-5">
+                        <div class="col-lg-3 col-md-5">
                             <div class="about_image">
                                 <img src="./assets/img/about/a1.jpg" alt="img">
                                 <img src="./assets/img/about/e1.svg" alt="About" data-aos="fade-down" data-aos-duration="1000">
@@ -276,7 +276,7 @@
                         <div class="col-lg-6 col-md-7">
                             <div class="about_text_inner">
                                 <div class="about_text">
-                                    <h2 class="text-white">ABOUT MRITTIK ARCHITECTS</h2>
+                                    <h2 class="text-white">ABOUT US</h2>
                                     <p>Arcana Architects and Interiors is a One Stop Solution for all your Architectural and Interior designing needs. 
 
                                         Our vison is to challenge and inspire generations of clients with our design, innovation and functions. We believe in Less is More, where we aim to add aesthetics, luxury and comfort to functional spaces.
@@ -339,7 +339,7 @@
                             <div class="icon_box">
                                 <h6>01</h6>
                                 <!-- <img src="./assets/img/icon_box/d1.svg" alt="Icon Box"> -->
-                                <h4 class="text-white"><a href="service-1.html">Consultation</a></h4>
+                                <h4 class="text-white"><a href="">Consultation</a></h4>
                                 <p class="text-gray-600">It’s challenging to decide if you require to make changes in your house and the procedure for the same. We help you with understanding the functions according to the spaces and suggest you with the suitable and best designs that add luxury and comfort.</p>
                                 <!-- <div class="arrow_effect">
                                     <a href="service-1.html"><span class="crossline1"></span><span class="crossline2"></span></a>
@@ -350,7 +350,7 @@
                             <div class="icon_box">
                                 <h6>02</h6>
                                 <!-- <img src="./assets/img/icon_box/d1.svg" alt="Icon Box"> -->
-                                <h4 class="text-white"><a href="service-1.html">Concept, Designing and Space Planning</a></h4>
+                                <h4 class="text-white"><a href="">Concept, Designing and Space Planning</a></h4>
                                 <p class="text-gray-600">Selecting an appropriate design is difficult when you have multiple options. We develop the concept for the site and provide you with the accurate layouts & designs considering the Vaastu. Followed by, detailed drawings suitable for site execution. </p>
                                 <!-- <div class="arrow_effect">
                                     <a href="service-1.html"><span class="crossline1"></span><span class="crossline2"></span></a>
@@ -361,7 +361,7 @@
                             <div class="icon_box">
                                 <h6>03</h6>
                                 <!-- <img src="./assets/img/icon_box/d1.svg" alt="Icon Box"> -->
-                                <h4 class="text-white"><a href="service-1.html">Renovation</a></h4>
+                                <h4 class="text-white"><a href="">Renovation</a></h4>
                                 <p class="text-gray-600">Renovating your house is a tedious process. May it be simple changes right from repainting to changing the design of your interiors, we are here for you. </p>
                                 <!-- <div class="arrow_effect">
                                     <a href="service-1.html"><span class="crossline1"></span><span class="crossline2"></span></a>
@@ -372,7 +372,7 @@
                             <div class="icon_box">
                                 <h6>04</h6>
                                 <!-- <img src="./assets/img/icon_box/d1.svg" alt="Icon Box"> -->
-                                <h4 class="text-white"><a href="service-1.html">Furniture Designing</a></h4>
+                                <h4 class="text-white"><a href="">Furniture Designing</a></h4>
                                 <p class="text-gray-600">Interiors are incomplete without the right designs of your Furniture. We make customized furniture as per the size of your house. From Dining Tables to Wardrobe Cabinets, we provide you with end to end professional assistance.</p>
                                 <!-- <div class="arrow_effect">
                                     <a href="service-1.html"><span class="crossline1"></span><span class="crossline2"></span></a>
@@ -383,7 +383,7 @@
                             <div class="icon_box">
                                 <h6>05</h6>
                                 <!-- <img src="./assets/img/icon_box/d1.svg" alt="Icon Box"> -->
-                                <h4 class="text-white"><a href="service-1.html">Civil Work</a></h4>
+                                <h4 class="text-white"><a href="">Civil Work</a></h4>
                                 <p class="text-gray-600">Well, its tedious to deal with plumbers and carpenters individually! We solve your problem by providing you with the right person and resolve your issue without your assistance. </p>
                                 <!-- <div class="arrow_effect">
                                     <a href="service-1.html"><span class="crossline1"></span><span class="crossline2"></span></a>
@@ -394,7 +394,7 @@
                             <div class="icon_box">
                                 <h6>06</h6>
                                 <!-- <img src="./assets/img/icon_box/d1.svg" alt="Icon Box"> -->
-                                <h4 class="text-white"><a href="service-1.html">Art Fabrics and Material Selections</a></h4>
+                                <h4 class="text-white"><a href="">Art Fabrics and Material Selections</a></h4>
                                 <p class="text-gray-600">Finding it difficult to decide the best materials and fabrics? We help you choose the perfect materials and art fabrics that is pocket friendly.</p>
                                 <!-- <div class="arrow_effect">
                                     <a href="service-1.html"><span class="crossline1"></span><span class="crossline2"></span></a>
@@ -913,19 +913,19 @@
                             <div class="communication">
                                 <div class="info_body">
                                     <h6>Studio Website</h6>
-                                    <h5>www.mrittikarchitects.com</h5>
+                                    <h5>www.arcanaarchitectures.com</h5>
                                 </div>
                                 <div class="info_body">
                                     <h6>Email Address</h6>
-                                    <h5>mrittikarchitects@gmail.com</h5>
+                                    <h5>rutuja.p@arcanaarchitects.com</h5>
                                 </div>
                                 <div class="info_body">
                                     <h6>Phone No</h6>
-                                    <h5>+123 (456789)</h5>
+                                    <h5>+91 81040 43086</h5>
                                 </div>
                                 <div class="info_body">
                                     <h6>Office Address</h6>
-                                    <h5>3 Madison Street NY, USA</h5>
+                                    <h5>Mumbai, India</h5>
                                 </div>
                             </div>
                         </div>
@@ -943,15 +943,15 @@
                                             <li class="youbetube"><a href="#"><i class="bi bi-youtube"></i></a></li>
                                         </ul>
                                     </div>
-                                    <div class="terms_condition">
+                                    <!-- <div class="terms_condition">
                                         <ul>
                                             <li><a href="#">Terms</a></li>
                                             <li><a href="#">Condition</a></li>
                                             <li><a href="#">Policy</a></li>
                                         </ul>
-                                    </div>
+                                    </div> -->
                                     <div class="copyright">
-                                        <p>Mrittik 2023. All Rights Reserved</p>
+                                        <p>Arcana 2023. All Rights Reserved</p>
                                     </div>
                                 </div>
                             </div>
