--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
                     
                     
                     <div class="header_right_part d-flex align-items-center">
-                        <button class="aside_open">
+                        <!-- <button class="aside_open">
                             <span class="line"></span>
                             <span class="line"></span>
                             <span class="line"></span>
-                        </button>
+                        </button> -->
                         <!-- <div class="header_search">								
                             <button type="submit" class="form-control-submit"><i class="bi bi-search"></i></button>
                         </div> -->
