phone side menu bug

--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                                 <button type="submit" class="form-control-submit"><i class="bi bi-search"></i></button>
                             </form>
                         </div>							
-                        <button class="ma5menu__toggle d-lg-none d-block" type="button">
+                        <!-- <button class="ma5menu__toggle d-lg-none d-block" type="button">
                             <i class="bi bi-list"></i>
-                        </button>
+                        </button> -->
                     </div>
                 </div>
 			</div>
