--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                                 <div class="meta m-0">
                                                     <div class="category text-olive text-uppercase">Condominium</div>
                                                 </div>
-                                                <h4><a href="project-details.html" class="text-white">Your Vision, Our Expertise; That's where your Dream Home Starts</a></h4>
+                                                <h4><a href="" class="text-white">Your Vision, Our Expertise; That's where your Dream Home Starts</a></h4>
                                                 <div class="details_link">
                                                     <a href="#contact_section">
                                                         <span class="link_text">Contact Us</span> 
@@ -162,7 +162,7 @@
                                                 <div class="meta m-0">
                                                     <div class="category text-olive text-uppercase">Condominium</div>
                                                 </div>
-                                                <h4><a href="project-details.html" class="text-white">We walk with you ever step of the way so that your Vision becomes Reality!</a></h4>
+                                                <h4><a href="" class="text-white">We walk with you ever step of the way so that your Vision becomes Reality!</a></h4>
                                                 <div class="details_link">
                                                     <a href="#contact_section">
                                                         <span class="link_text">Contact Us</span> 
@@ -187,7 +187,7 @@
                                                 <div class="meta m-0">
                                                     <div class="category text-olive text-uppercase">Condominium</div>
                                                 </div>
-                                                <h4><a href="project-details.html" class="text-white">Your Dream home starts here and we'll show you how its done!!</a></h4>
+                                                <h4><a href="" class="text-white">Your Dream home starts here and we'll show you how its done!!</a></h4>
                                                 <div class="details_link">
                                                     <a href="#contact_section">
                                                         <span class="link_text">Contact Us</span> 
@@ -479,7 +479,7 @@
                                         <div class="works-info">
                                             <div class="label-text">
                                                 <h6><a href="#">Kitchen</a></h6>
-                                                <h5><a href="project-details.html">Be inspired every time you step into your kitchen</a></h5>
+                                                <h5><a href="">Be inspired every time you step into your kitchen</a></h5>
                                             </div>
                                         </div>
                                     </div>
@@ -495,18 +495,18 @@
                                         <div class="works-info">
                                             <div class="label-text">
                                                 <h6><a href="#">Window Work</a></h6>
-                                                <h5><a href="project-details.html">Welcome to brighter, airer and enjoyable mornings</a></h5>
+                                                <h5><a href="">Welcome to brighter, airer and enjoyable mornings</a></h5>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="grid-item active" data-aos="fade-left" data-aos-duration="1500">
+                                <div class="grid-item" data-aos="fade-left" data-aos-duration="1500">
                                     <div class="thumb">
                                         <img class="item_image" src="./assets/img/image_box/1.jpg" alt="img">
                                         <div class="works-info">
                                             <div class="label-text">
                                                 <h6><a href="#">TV Cabinet</a></h6>
-                                                <h5><a href="project-details.html">For every space, we provide an experience worth remembering</a></h5>
+                                                <h5><a href="">For every space, we provide an experience worth remembering</a></h5>
                                             </div>
                                         </div>
                                     </div>
