--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="container">
                 <div class="header_inner d-flex align-items-center justify-content-between">
                     <div class="logo">
-                        <a href="index.html" class="light_logo"><img src="./assets/img/logo-light.svg" alt="logo"></a>
+                        <a href="index.html" class="light_logo"><img src="./assets/img/logo_test.jpg" alt="logo"></a>
                         <a href="index.html" class="dark_logo"><img src="./assets/img/logo-dark.svg" alt="logo"></a>
                     </div>
 
@@ -503,7 +503,7 @@
                                 <div class="grid-item" data-aos="fade-left" data-aos-duration="1500">
                                     <div class="thumb">
                                         <img class="item_image" src="./assets/img/image_box/1.jpg" alt="img">
-                                        <div class="works-info">
+                                        <div class="works-info" id = "invi">
                                             <div class="label-text">
                                                 <h6><a href="#">TV Cabinet</a></h6>
                                                 <h5><a href="">For every space, we provide an experience worth remembering</a></h5>
@@ -842,7 +842,7 @@
                         <div class="col-lg-5">
                             <div class="section-header">
                                 <h2 class="text-white text-uppercase mb-4">GET IN TOUCH WITH US</h2>
-                                <p class="$gray-600">Looking out for an interior designer who chalks down your vision, provides you with the best desgins and executes the process in the given time at an affordable price?<br><br>Let's connect! Our talent at ARCANA shall transform your dreams to reality.</p>
+                                <p class="$gray-600">Looking out for an architect and an interior designer who chalks down your vision, provides you with the best desgins and executes the process in the given time at an affordable price?<br><br>Let's connect! Our talent at ARCANA shall transform your dreams to reality.</p>
                             </div>
                         </div>
                         <div class="col-lg-6">
@@ -933,7 +933,7 @@
                             <div class="footer_elements d-flex align-items-center justify-content-end">
                                 <div class="footer_elements_inner">
                                     <div class="footer_logo">
-                                        <a href="index.html" class="light_logo"><img src="./assets/img/logo-light.svg" alt="logo"></a>
+                                        <a href="index.html" class="light_logo"><img src="./assets/img/logo_test.jpg" alt="logo"></a>
                                     </div>
                                     <div class="footer_social">
                                         <ul class="social_list">
