--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
         
 
         <!-- Color Mode Switcher -->
-		<div id="mode_switcher">
+		<!-- <div id="mode_switcher">
 			<span><i class="bi bi-moon-fill"></i></span>	
-		</div>        
+		</div>         -->
 
         <!-- Cursor Effect -->
         <div class="pointer bnz-pointer" id="bnz-pointer"></div>
@@ -114,9 +114,10 @@
                 <div class="social_sites">
                     <ul class="d-flex align-items-center justify-content-center">
                         <li><a href="#"><i class="bi bi-facebook"></i></a></li>
-                        <li><a href="#"><i class="bi bi-twitter"></i></a></li>
-                        <li><a href="#"><i class="bi bi-instagram"></i></a></li>
-                        <li><a href="#"><i class="bi bi-youtube"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/rutuja-pokle-a07a26197"><i class="bi bi-linkedin"></i></a></li>
+                        <!-- <li><a href="#"><i class="bi bi-twitter"></i></a></li> -->
+                        <li><a href="https://instagram.com/arcanaarchitects_?igshid=YmMyMTA2M2Y="><i class="bi bi-instagram"></i></a></li>
+                        <!-- <li><a href="#"><i class="bi bi-youtube"></i></a></li> -->
                     </ul>
                 </div>
 			</div>
@@ -938,9 +939,9 @@
                                     <div class="footer_social">
                                         <ul class="social_list">
                                             <li class="facebook"><a href="#"><i class="bi bi-facebook"></i></a></li>
-                                            <li class="twitter"><a href="#"><i class="bi bi-twitter"></i></a></li>
-                                            <li class="instagram"><a href="#"><i class="bi bi-instagram"></i></a></li>
-                                            <li class="youbetube"><a href="#"><i class="bi bi-youtube"></i></a></li>
+                                            <li class="twitter"><a href="https://www.linkedin.com/in/rutuja-pokle-a07a26197"><i class="bi bi-linkedin"></i></a></li>
+                                            <li class="instagram"><a href="https://instagram.com/arcanaarchitects_?igshid=YmMyMTA2M2Y="><i class="bi bi-instagram"></i></a></li>
+                                            <!-- <li class="youbetube"><a href="#"><i class="bi bi-youtube"></i></a></li> -->
                                         </ul>
                                     </div>
                                     <!-- <div class="terms_condition">
