--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
                 </div>
                 <div class="container">
                     <div class="section-header text-center has_line">
-                        <h2 class="text-white">Project Gallery</h2>
+                        <h2 class="text-white">Bespoke Furniture</h2>
                         <div class="section-desc row align-items-center justify-content-center">
                             <div class="col-lg-6 ">
                                 <p>Designs are something that makes ART. We provide customized furniture as per your needs. Check our collection below and get one for yourself!</p>
