netlify form api integration

--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
                             <button type="submit" class="form-control-submit"><i class="bi bi-search"></i></button>
                         </div> -->
                         <div class="open_search">
-                            <form class="search_form" action="search.php">
+                            <!-- <form class="search_form" action="search.php"> -->
+                            <form class="search_form" data-netlify="true">
                                 <input type="text" name="search" class="keyword form-control" placeholder="Search..." >
                                 <button type="submit" class="form-control-submit"><i class="bi bi-search"></i></button>
                             </form>
