netlify form api integration bugfix

--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
                         <!-- <div class="header_search">								
                             <button type="submit" class="form-control-submit"><i class="bi bi-search"></i></button>
                         </div> -->
-                        <div class="open_search">
+                        <!-- <div class="open_search"> -->
                             <!-- <form class="search_form" action="search.php"> -->
-                            <form class="search_form" data-netlify="true">
+                            <!-- <form class="search_form" >
                                 <input type="text" name="search" class="keyword form-control" placeholder="Search..." >
                                 <button type="submit" class="form-control-submit"><i class="bi bi-search"></i></button>
-                            </form>
-                        </div>							
+                            </form> -->
+                        <!-- </div>							 -->
                         <!-- <button class="ma5menu__toggle d-lg-none d-block" type="button">
                             <i class="bi bi-list"></i>
                         </button> -->
@@ -849,7 +849,7 @@
                         </div>
                         <div class="col-lg-6">
                             <div class="home_contact">
-                                <form action="contact.php" method="POST">
+                                <form data-netlify="true" method="POST">
                                     <input class="form-control form-control-lg" name="name" id="name" type="text" placeholder="Your Name*" required aria-label=".form-control-lg example">
                                     <input class="form-control form-control-lg" name="phone" id="phone" type="number" placeholder="Your Phone No" aria-label=".form-control-lg example">
                                     <input class="form-control form-control-lg" name="email" id="email" type="email" placeholder="Your Email*" required aria-label=".form-control-lg example">
